apps/base/calibre-web-automated/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre-web-automated
  labels:
    app.kubernetes.io/name: calibre-web-automated
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: calibre-web-automated
  template:
    metadata:
      labels:
        app.kubernetes.io/name: calibre-web-automated
    spec:
      serviceAccountName: calibre-web-automated
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      # securityContext:
      #   fsGroup: 33
      #   runAsUser: 33
      #   runAsGroup: 33
      containers:
      - name: calibre-web-automated
        image: crocodilestick/calibre-web-automated:v4.0.6
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8083
          protocol: TCP
        securityContext:
          allowPrivilegeEscalation: false
        volumeMounts:
        - name: data
          mountPath: /config
          subPath: config
        - name: media
          mountPath: /calibre
          subPath: Calibre
        - name: media
          mountPath: /calibre-library
          subPath: eBooks
        - name: media
          mountPath: /cwa-book-ingest
          subPath: eBooks/[Ingest]
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: calibre-web-automated-claim
      - name: media
        persistentVolumeClaim:
          claimName: media-claim
