apps/base/calibre-web-automated/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calibre-web-automated
  namespace: calibre-web-automated
  labels:
    app.kubernetes.io/name: calibre-web-automated
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 8083
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: calibre-web-automated
